...
        contentStyle: { backgroundColor: isDarkMode ? COLORS.zinc[950] : COLORS.zinc[200] },
        headerShadowVisible: false,
        headerBackButtonDisplayMode: "minimal",
      }}
      initialRouteName="index"
    >
      <Stack.Screen name="index" options={{ title: "Profile" }} />
      <Stack.Screen name="add" options={{ title: "Add Profile" }} />
      <Stack.Screen name="guidelines" options={{ title: "Community Guidelines" }} />
      <Stack.Screen name="about" options={{ title: "About" }} />
      <Stack.Screen name="editProfile" options={{ title: "Edit Profile" }} />
      <Stack.Screen name="editUsername" options={{ title: "Edit Username" }} />
      <Stack.Screen name="accountOptions" options={{ title: "Account" }} />
...
      <Stack.Screen name="verifyEmail" options={{ title: "Verify Email" }} />
      <Stack.Screen name="deleteProfile" options={{ title: "Delete Profile" }} />
      <Stack.Screen name="deleteAccount" options={{ title: "Delete Account" }} />
      <Stack.Screen name="profileImageCamera" options={{ title: "Profile Image Camera", headerShown: false }} />
      <Stack.Screen name="feedback/createFeedback" options={{ title: "New Feedback" }} />
      <Stack.Screen name="feedback/index" options={{ title: "Feedback" }} />
      <Stack.Screen name="feedback/[id]" options={{ title: "Details" }} />
      <Stack.Screen name="qrCode" options={{ title: "QR Code" }} />
      <Stack.Screen name="profileDetails" options={{ title: "Profile Details" }} />
      <Stack.Screen name="profilePostsList" options={{ title: "Posts" }} />
      <Stack.Screen name="taggedPosts" options={{ title: "Tagged Posts" }} />
      <Stack.Screen name="taggedPostsList" options={{ title: "Tagged Posts" }} />
      <Stack.Screen name="appDetails" options={{ title: "App Details" }} />
...
