...
  }, [totalCount]);

  useLayoutEffect(() => {
    navigation.setOptions({
      headerRight: () => (
        <Button
          text="Create"
          variant="text"
          onPress={() => router.push("/(app)/profile/feedback/createFeedback")}
          textStyle={{ color: setLightOrDark(COLORS.sky[600], COLORS.sky[500]) }}
          buttonStyle={{ paddingHorizontal: 8, paddingBottom: 4 }}
        />
      ),
...
            tintColor={COLORS.zinc[400]}
            colors={[COLORS.zinc[400]]}
          />
        }
        ListEmptyComponent={
          <View style={s.emptyComponentContainer}>
            <Text style={s.emptyComponentTitle}>No feedback tickets found</Text>
            <Text style={s.emptyComponentDescription} darkColor={COLORS.zinc[400]}>
              Use the "Create" button to send feedback to the team.
            </Text>
          </View>
        }
        ListFooterComponent={
...
